frontend/test/should_pass/param_001.grg
using attrib_model_001;

rule r (nby : NBYTE, nsh : NSHORT, ni : NINT, nl : NLONG, nb : NBOOL, nf : NFLOAT, nd : NDOUBLE, ns : NSTRING) {
	if { nby.a == 1y && nsh.a == 1s && ni.a == 1 && nl.a == 1l && nb.a && nf.a != 42.0 && nd.a != 7.0 && ns.a == "Hi"; }

	modify {
	}
}

