frontend/test/should_fail/attrib_byte_003.grg
using attrib_model_001;

rule r {
	nby : NBYTE;
	nsh : NSHORT;
	ni : NINT;
	nl : NLONG;
	nb : NBOOL;
	nf : NFLOAT;
	nd : NDOUBLE;
	ns : NSTRING;

	modify {
		eval {
			nby.a = nl.a;
		}
	}
}

